Text Out of container bug(fixex)

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,6 +1,6 @@
 body {
   padding-bottom: 5rem;
-  background-color: rgba(251, 209, 209, 0.506);
+  background-color: rgba(37, 199, 228, 0.506);
   padding-right:5px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif;
@@ -10,7 +10,7 @@ main{
 }
 
 .chat-form {
-  background: rgba(255, 3, 3, 0.15);
+  background: rgba(242, 242, 242, 0.7);
   padding: 0.25rem;
   position: fixed;
   bottom: 0;
@@ -46,15 +46,21 @@ main{
 }
 
 .display {
+  display: flex;
+  flex-direction: column;
   list-style-type: none;
   margin: 0;
   padding: 0;
-
-  width: 100%;
+  max-width: 99%;
 }
-.display li {
+.display li{
+  background-color: #b1aaaa;
   padding: 0.5rem 1rem;
 }
+.display li p{
+  word-wrap: break-word;
+}
+
 
 .display > li:nth-child(odd) {
   background: #efefef;
@@ -63,6 +69,7 @@ main{
 
 @media (max-width: 720px) {
   body {
+    padding-bottom:10rem;
     background-color: wheat;
   }
   .chat-form {
